samples/_failures_safe/1761242092_383c12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48261aaf.c: In function ‘main’:
./samples/SAFE/__tmp_48261aaf.c:153:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  153 |     int choice
      |     ^~~
./samples/SAFE/__tmp_48261aaf.c:153:5: error: expected declaration or statement at end of input
